finish Bit Manipulation

--- a/leetcode.com/TopInterview150.ipynb
+++ b/leetcode.com/TopInterview150.ipynb
@@ -15,7 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
+    "import array        # https://docs.python.org/3/library/array.html\n",
+    "import bisect       # https://docs.python.org/3/library/bisect.html\n",
+    "import collections  # https://docs.python.org/3/library/collections.html\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "# For Map/TreeMap data structure, you may use sortedcontainers library.\n",
+    "# - https://grantjenks.com/docs/sortedcontainers/"
    ]
   },
   {
@@ -230,25 +237,164 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4470cacf",
+   "cell_type": "markdown",
+   "id": "e627f932",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### [169. Majority Element](https://leetcode.com/problems/majority-element/) - Easy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f825b7c3",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def majorityElement(self, nums: List[int]) -> int:\n",
+    "        return sorted(nums)[len(nums)//2]\n",
+    "\n",
+    "assert Solution().majorityElement([2,2,1,1,1,2,2]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba14310d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0552a935",
+   "metadata": {},
+   "source": [
+    "### [189. Rotate Array](https://leetcode.com/problems/rotate-array/description/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "355a6cff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rotate(self, nums: List[int], k: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        k %= len(nums)\n",
+    "        nums[:] = nums[-k:] + nums[:-k]\n",
+    "    \n",
+    "    def rotate2(self, nums: List[int], k: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        k %= len(nums)\n",
+    "        for _ in range(k):\n",
+    "            nums.insert(0,  nums.pop() )\n",
+    "\n",
+    "nums = [1,2,3,4,5,6,7]\n",
+    "Solution().rotate(nums, 3)\n",
+    "assert nums == [5,6,7,1,2,3,4]\n",
+    "\n",
+    "nums = [1,2]\n",
+    "Solution().rotate(nums, 3)\n",
+    "assert nums == [2, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0407e0d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8686da03",
+   "metadata": {},
+   "source": [
+    "### [121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e37c2ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        left, profit = prices[0], 0\n",
+    "        for right in prices[1:]:\n",
+    "            if (right < left):\n",
+    "                left = right\n",
+    "            elif right > (profit+left):\n",
+    "                profit = right - left\n",
+    "        return profit\n",
+    "    \n",
+    "    def maxProfit2(self, prices: List[int]) -> int:\n",
+    "        sell, profit = float(\"Inf\"), 0\n",
+    "        for i in range(len(prices)):\n",
+    "            profit = max(profit, prices[i]-sell)\n",
+    "            sell = min(sell, prices[i])\n",
+    "        return profit\n",
+    "\n",
+    "assert Solution().maxProfit([7,1,5,3,6,4]) == 5\n",
+    "assert Solution().maxProfit([7,6,4,3,1])  == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de239822",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "355a6cff",
+   "id": "25ec87f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48cdf00d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a34695b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01de019",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c8dbeb1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "2bc59558",
    "metadata": {},
    "outputs": [],
@@ -343,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "cde46eb2",
    "metadata": {},
    "outputs": [],
@@ -391,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "98a9121c",
    "metadata": {},
    "outputs": [],
@@ -455,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "698365d8",
    "metadata": {},
    "outputs": [],
@@ -517,25 +663,318 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "665b414c",
+   "metadata": {},
+   "source": [
+    "## Bit Manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e33dfe53",
+   "metadata": {},
+   "source": [
+    "### [67. Add Binary](https://leetcode.com/problems/add-binary/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e313a3b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def addBinary2(self, a: str, b: str) -> str:\n",
+    "        return f'{int(a,2)+int(b,2):b}'\n",
+    "    \n",
+    "    def addBinary(self, a: str, b: str) -> str:\n",
+    "        i, j = len(a)-1, len(b)-1\n",
+    "        res, c = \"\", 0\n",
+    "        while i>=0 or j>=0 or c:\n",
+    "            if i>=0:\n",
+    "                c += a[i]=='1'\n",
+    "                i-=1\n",
+    "            if j>=0:\n",
+    "                c += b[j]=='1'\n",
+    "                j-=1\n",
+    "            res +=  str(c%2)\n",
+    "            c //= 2\n",
+    "        return res[::-1]\n",
+    "\n",
+    "assert Solution().addBinary(\"11\", \"1\") == \"100\"\n",
+    "assert Solution().addBinary(\"1010\", \"1011\") == \"10101\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154e6e7b",
+   "id": "62485c74",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "677d9b67",
+   "metadata": {},
+   "source": [
+    "### [190. Reverse Bits](https://leetcode.com/problems/reverse-bits/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "449ad681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseBits2(self, n: int) -> int:\n",
+    "        return int(f'{n:032b}'[::-1],2)\n",
+    "    \n",
+    "    def reverseBits(self, n: int) -> int:\n",
+    "        res = 0\n",
+    "        for i in range(32):\n",
+    "            res = (res<<1) + (n&1)\n",
+    "            n>>=1\n",
+    "        return res\n",
+    "\n",
+    "assert Solution().reverseBits(43261596) == 964176192\n",
+    "assert Solution().reverseBits(4294967293) == 3221225471"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba04a638",
+   "id": "28bf24a4",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5f48fc3",
+   "metadata": {},
+   "source": [
+    "### [191. Number of 1 Bits](https://leetcode.com/problems/number-of-1-bits/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "baf463b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def hammingWeight(self, n: int) -> int:  # 35ms, 16.5MB\n",
+    "        counter = collections.Counter(bin(n)[2:])\n",
+    "        return counter.get(\"1\", 0)\n",
+    "    \n",
+    "    def hammingWeight1(self, n: int) -> int:  # 37ms, 16.5MB\n",
+    "        s = 0\n",
+    "        while n:\n",
+    "            s += (n&1)\n",
+    "            n>>=1\n",
+    "        return s\n",
+    "    \n",
+    "    def hammingWeight2(self, n: int) -> int:  # 40ms, 16.5MB\n",
+    "        return sum(map(int, list(f'{n:b}')))\n",
+    "    \n",
+    "    def hammingWeight3(self, n: int) -> int:  # 38ms, 16.6MB\n",
+    "        return f'{n:b}'.count('1')\n",
+    "\n",
+    "assert Solution().hammingWeight(11) == 3\n",
+    "assert Solution().hammingWeight(128) == 1\n",
+    "assert Solution().hammingWeight(2147483645) == 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61fdd182",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a0f746f",
+   "metadata": {},
+   "source": [
+    "### [136. Single Number](https://leetcode.com/problems/single-number/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ba04a638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def singleNumber(self, nums: List[int]) -> int:  # 98 ms, 19 MB\n",
+    "        ans = 0\n",
+    "        for i in nums:\n",
+    "            ans ^= i\n",
+    "        return ans\n",
+    "        # return reduce(lambda total, el: total ^ el, nums)  # 105 ms, 19 MB\n",
+    "    \n",
+    "    def singleNumber2(self, nums: List[int]) -> int:  # 114 ms, 18.9 MB\n",
+    "        nums.sort()\n",
+    "        L = len(nums)\n",
+    "        if L%2:\n",
+    "            nums.append(float('inf'))\n",
+    "        for i in range(0, L, 2):\n",
+    "            if nums[i]!=nums[i+1]:\n",
+    "                return nums[i]\n",
+    "\n",
+    "assert Solution().singleNumber([2,2,1]) == 1\n",
+    "assert Solution().singleNumber([4,1,2,1,2]) == 4\n",
+    "assert Solution().singleNumber([1]) == 1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9a4260fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80dc0cc9",
+   "metadata": {},
+   "source": [
+    "### [137. Single Number II](https://leetcode.com/problems/single-number-ii/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "57354c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def singleNumber(self, nums: List[int]) -> int: # 55 ms, 18.8 MB\n",
+    "        return (3 * sum(set(nums)) - sum(nums)) // 2\n",
+    "\n",
+    "    def singleNumber2(self, nums: List[int]) -> int: # 61 ms, 18.3 MB\n",
+    "        nums.sort()\n",
+    "        nums.extend([0,0])\n",
+    "        for i in range(0, len(nums), 3):\n",
+    "            if nums[i]!=nums[i+2]:\n",
+    "                return nums[i]\n",
+    "    \n",
+    "    def singleNumber3(self, nums: List[int]) -> int: # 49 ms, 18.5 MB\n",
+    "        ones = 0\n",
+    "        twos = 0\n",
+    "        for num in nums:\n",
+    "            ones = (ones ^ num) & ~twos\n",
+    "            twos = (twos ^ num) & ~ones\n",
+    "        return ones\n",
+    "\n",
+    "\n",
+    "assert Solution().singleNumber([2,2,3,2]) == 3\n",
+    "assert Solution().singleNumber([0,1,0,1,0,1,99]) == 99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92060093",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fee79219",
+   "metadata": {},
+   "source": [
+    "### [201. Bitwise AND of Numbers Range](https://leetcode.com/problems/bitwise-and-of-numbers-range/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "36d22579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rangeBitwiseAnd(self, left: int, right: int) -> int:  # 41 ms, 16.5 MB\n",
+    "        while right>left:\n",
+    "            right &=(right-1)\n",
+    "        return right\n",
+    "    \n",
+    "    def rangeBitwiseAnd1(self, left: int, right: int) -> int:  # 63 ms, 16.4 MB\n",
+    "        cnt = 0\n",
+    "        while left != right:\n",
+    "            left >>= 1\n",
+    "            right >>= 1\n",
+    "            cnt += 1\n",
+    "        return left << cnt\n",
+    "    \n",
+    "    def rangeBitwiseAnd2(self, left: int, right: int) -> int:  # 45 ms, 16.4 MB\n",
+    "        a = f'{left:b}'\n",
+    "        L = len(a)\n",
+    "        b = f'{right:b}'\n",
+    "        if L < len(b):\n",
+    "            return 0\n",
+    "        res = 0\n",
+    "        for i in range(L):\n",
+    "            if a[i]!=b[i]:\n",
+    "                break\n",
+    "            res += (int(a[i])<<(L-1-i))\n",
+    "        return res\n",
+    "\n",
+    "assert Solution().rangeBitwiseAnd(5, 7) == 4\n",
+    "assert Solution().rangeBitwiseAnd(0, 0) == 0\n",
+    "assert Solution().rangeBitwiseAnd(2, 2) == 2\n",
+    "assert Solution().rangeBitwiseAnd(1, 2147483647) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b326c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbdfa9af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c6bcd3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3aa351b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e120413",
    "metadata": {},
    "outputs": [],
    "source": []
