--- a/leetcode.com/TopInterview150.ipynb
+++ b/leetcode.com/TopInterview150.ipynb
@@ -368,41 +368,476 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "31fca415",
+   "metadata": {},
+   "source": [
+    "## Hashmap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca3d2ed",
+   "metadata": {},
+   "source": [
+    "### [383. Ransom Note](https://leetcode.com/problems/ransom-note/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "db047d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def canConstruct(self, ransomNote: str, magazine: str) -> bool:  # 31 ms, 16.7 MB\n",
+    "        for i in set(ransomNote):\n",
+    "            if magazine.count(i) < ransomNote.count(i):\n",
+    "                return False\n",
+    "        return True\n",
+    "    \n",
+    "    def canConstruct1(self, ransomNote: str, magazine: str) -> bool:  # 35 ms, 16.6 MB\n",
+    "        for i in ransomNote:\n",
+    "            if i in magazine:\n",
+    "                magazine = magazine.replace(i,\"\",1)\n",
+    "            else: return False\n",
+    "        return True\n",
+    "    \n",
+    "    def canConstruct2(self, ransomNote: str, magazine: str) -> bool:  # 47 ms, 16.8 MB\n",
+    "        note, mag = collections.Counter(ransomNote), collections.Counter(magazine)\n",
+    "        return note & mag == note\n",
+    "    \n",
+    "    def canConstruct3(self, ransomNote: str, magazine: str) -> bool:  # 57 ms, 16.6 MB\n",
+    "        d = collections.defaultdict(int)\n",
+    "        for c in magazine:\n",
+    "            d[c] += 1\n",
+    "        for c in ransomNote:\n",
+    "            if d[c]:\n",
+    "                d[c] -= 1\n",
+    "            else:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "assert Solution().canConstruct(\"a\", \"b\") == False\n",
+    "assert Solution().canConstruct(\"aa\", \"ab\") == False\n",
+    "assert Solution().canConstruct(\"aa\", \"aab\") == True"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48cdf00d",
+   "id": "95581dae",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a34695b",
+   "cell_type": "markdown",
+   "id": "cbb73e91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### [205. Isomorphic Strings](https://leetcode.com/problems/isomorphic-strings/) - Easy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b01de019",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9c8dbeb1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isIsomorphic(self, s: str, t: str) -> bool:  # 34 ms, 16.6 MB\n",
+    "        return len(set(zip(s, t))) == len(set(s)) == len(set(t))\n",
+    "    \n",
+    "    def isIsomorphic2(self, s: str, t: str) -> bool:  # 37 ms, 16.6 MB\n",
+    "        d = {}\n",
+    "        seen = set()\n",
+    "        for a, b in zip(s, t):\n",
+    "            if a not in d :\n",
+    "                if b in seen:\n",
+    "                    return False\n",
+    "                d[a] = b\n",
+    "                seen.add(b)\n",
+    "            elif d[a]!=b:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "assert Solution().isIsomorphic(\"egg\", \"add\") == True\n",
+    "assert Solution().isIsomorphic(\"foo\", \"bar\") == False\n",
+    "assert Solution().isIsomorphic(\"paper\", \"title\") == True\n",
+    "assert Solution().isIsomorphic(\"badc\", \"baba\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "053fbf09",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b484819",
+   "id": "943d96e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be03e5b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8804f1d",
+   "metadata": {},
+   "source": [
+    "### [290. Word Pattern](https://leetcode.com/problems/word-pattern/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5d8ed712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def wordPattern(self, pattern: str, s: str) -> bool:   # 28 ms, 16.3 MB\n",
+    "        findPattern = lambda lst: [lst.index(i) for i in lst]\n",
+    "        return findPattern(list(pattern)) == findPattern(s.split()) \n",
+    "    \n",
+    "    def wordPattern1(self, pattern: str, s: str) -> bool:  # 33 ms, 16.5 MB\n",
+    "        text = s.split()\n",
+    "        return [*map(pattern.index, pattern)] == [*map(text.index, text)]\n",
+    "\n",
+    "    def wordPattern2(self, pattern: str, s: str) -> bool:  # 37 ms, 16.5 MB\n",
+    "        s = s.split()\n",
+    "        return len(pattern) == len(s) and len(set(pattern)) == len(set(s)) == len(set(zip(pattern, s)))\n",
+    "    \n",
+    "    def wordPattern3(self, pattern: str, s: str) -> bool:  # 39 ms, 16.4 MB\n",
+    "        s = s.split()\n",
+    "        if len(pattern) != len(s):\n",
+    "            return False\n",
+    "        d = {}\n",
+    "        seen = set()\n",
+    "        for a, b in zip(pattern, s):\n",
+    "            if a not in d :\n",
+    "                if b in seen:\n",
+    "                    return False\n",
+    "                d[a] = b\n",
+    "                seen.add(b)\n",
+    "            elif d[a]!=b:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "assert Solution().wordPattern(\"abba\", \"dog cat cat dog\") == True\n",
+    "assert Solution().wordPattern(\"abba\", \"dog cat cat fish\") == False\n",
+    "assert Solution().wordPattern(\"aaaa\", \"dog cat cat dog\") == False\n",
+    "assert Solution().wordPattern(\"aba\", \"cat cat cat dog\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6be71ea6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f183ff17",
+   "metadata": {},
+   "source": [
+    "### [242. Valid Anagram](https://leetcode.com/problems/valid-anagram/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "09f21645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isAnagram(self, s: str, t: str) -> bool:  # 39 ms, 16.9 MB\n",
+    "        return collections.Counter(s) == collections.Counter(t)\n",
+    "\n",
+    "assert Solution().isAnagram(\"anagram\", \"nagaram\") == True\n",
+    "assert Solution().isAnagram(\"rat\", \"car\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c88a0f44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9e90a16",
+   "metadata": {},
+   "source": [
+    "### [49. Group Anagrams](https://leetcode.com/problems/group-anagrams/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3c89489c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HashableCounter(collections.Counter):\n",
+    "    def __hash__(self):\n",
+    "        return hash(tuple(sorted(self.items())))\n",
+    "\n",
+    "class Solution:\n",
+    "    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:  # 73 ms, 19.5 MB\n",
+    "        d = collections.defaultdict(list)\n",
+    "        for word in strs:\n",
+    "            d[''.join(sorted(word))].append(word)\n",
+    "        return list(d.values())\n",
+    "    \n",
+    "    def groupAnagrams2(self, strs: List[str]) -> List[List[str]]:  # 123 ms, 21.8 MB\n",
+    "        d = collections.defaultdict(list)\n",
+    "        for item in strs:\n",
+    "            d[HashableCounter(item)].append(item)\n",
+    "        return list(d.values())\n",
+    "\n",
+    "assert Solution().groupAnagrams([\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]) == [['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n",
+    "assert Solution().groupAnagrams([\"\"]) == [['']]\n",
+    "assert Solution().groupAnagrams([\"a\"]) == [['a']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "570a77d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29a2333f",
+   "metadata": {},
+   "source": [
+    "### [1. Two Sum](https://leetcode.com/problems/two-sum/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d3c872ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def twoSum(self, nums: List[int], target: int) -> List[int]:  # 50 ms, 17.9 MB\n",
+    "        d = {}\n",
+    "        for i, v in enumerate(nums):\n",
+    "            if v in d:\n",
+    "                return [d[v], i]\n",
+    "            d[target-v] = i\n",
+    "\n",
+    "assert Solution().twoSum([2,7,11,15], 9) == [0,1]\n",
+    "assert Solution().twoSum([3,2,4], 6) == [1,2]\n",
+    "assert Solution().twoSum([3,3], 6) == [0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b2a28ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12f4ead8",
+   "metadata": {},
+   "source": [
+    "### [202. Happy Number](https://leetcode.com/problems/happy-number/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0a0d04ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isHappy(self, n: int) -> bool:  # 32 ms, 16.3 MB\n",
+    "        f = lambda n: sum(map(lambda x: int(x)**2, str(n)))\n",
+    "        seen = set()\n",
+    "        while n!=1 and n not in seen:\n",
+    "            seen.add(n)\n",
+    "            n = f(n)\n",
+    "        return n==1\n",
+    "        \n",
+    "    def isHappy2(self, n: int) -> bool:  # 31 ms, 16.4 MB\n",
+    "        seen = set()\n",
+    "        while n!=1:\n",
+    "            if n in seen:\n",
+    "                return False\n",
+    "            seen.add(n)\n",
+    "            res = 0\n",
+    "            while n:\n",
+    "                res += (n%10)**2\n",
+    "                n//=10\n",
+    "            n = res\n",
+    "        return True\n",
+    "\n",
+    "assert Solution().isHappy(19) == True\n",
+    "assert Solution().isHappy(2) == False\n",
+    "assert Solution().isHappy(1111111) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ff95087",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db16ef03",
+   "metadata": {},
+   "source": [
+    "### [219. Contains Duplicate II](https://leetcode.com/problems/contains-duplicate-ii/) - Easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f5bc6f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def containsNearbyDuplicate(self, nums: List[int], k: int) -> bool:  # 441 ms, 29.6 MB\n",
+    "        d = {}\n",
+    "        for i, num in enumerate(nums):\n",
+    "            if num in d and (i-d[num])<=k:\n",
+    "                return True\n",
+    "            d[num] = i\n",
+    "        return False\n",
+    "\n",
+    "assert Solution().containsNearbyDuplicate([1,2,3,1], 3) == True\n",
+    "assert Solution().containsNearbyDuplicate([1,0,1,1], 1) == True\n",
+    "assert Solution().containsNearbyDuplicate([1,2,3,1,2,3], 2) == False\n",
+    "assert Solution().containsNearbyDuplicate([99,99], 2) == True\n",
+    "assert Solution().containsNearbyDuplicate([1,2,3,4,5,6,7,8,9,10], 15) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05502c2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b81a47de",
+   "metadata": {},
+   "source": [
+    "### [128. Longest Consecutive Sequence](https://leetcode.com/problems/longest-consecutive-sequence/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a55226d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def longestConsecutive(self, nums: List[int]) -> int:  # 329 ms, 31.7 MB\n",
+    "        nums = set(nums)\n",
+    "        mx = 0\n",
+    "        for item in nums:\n",
+    "            if (item-1) not in nums:\n",
+    "                cnt = 1\n",
+    "                while (item+cnt) in nums:\n",
+    "                    cnt += 1\n",
+    "                if cnt>mx :\n",
+    "                    mx = cnt\n",
+    "        return mx\n",
+    "\n",
+    "assert Solution().longestConsecutive([100,4,200,1,3,2]) == 4\n",
+    "assert Solution().longestConsecutive([0,3,7,2,5,8,4,6,0,1]) == 9\n",
+    "assert Solution().longestConsecutive([]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b89b67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d9821a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f99d76f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b32c5c5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f670cc09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a2721a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "716bce88",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -441,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "2bc59558",
    "metadata": {},
    "outputs": [],
@@ -489,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "cde46eb2",
    "metadata": {},
    "outputs": [],
@@ -537,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "98a9121c",
    "metadata": {},
    "outputs": [],
@@ -601,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "698365d8",
    "metadata": {},
    "outputs": [],
@@ -680,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "e313a3b7",
    "metadata": {},
    "outputs": [],
@@ -725,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "449ad681",
    "metadata": {},
    "outputs": [],
@@ -763,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "baf463b2",
    "metadata": {},
    "outputs": [],
@@ -809,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "ba04a638",
    "metadata": {},
    "outputs": [],
@@ -854,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "57354c83",
    "metadata": {},
    "outputs": [],
@@ -901,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "36d22579",
    "metadata": {},
    "outputs": [],
