--- a/leetcode.com/TopInterview150.ipynb
+++ b/leetcode.com/TopInterview150.ipynb
@@ -16,7 +16,7 @@
     "## Table of contents\n",
     "- [Array / String](#Array-/-String)\n",
     "- [Two Pointers](#Two-Pointers)\n",
-    "- Sliding Window\n",
+    "- [Sliding Window](#Sliding-Window)\n",
     "- Matrix\n",
     "- [Hashmap](#Hashmap)\n",
     "- [Intervals](#Intervals)\n",
@@ -311,7 +311,7 @@
    "id": "0552a935",
    "metadata": {},
    "source": [
-    "### [189. Rotate Array](https://leetcode.com/problems/rotate-array/description/) - Medium"
+    "### [189. Rotate Array](https://leetcode.com/problems/rotate-array/) - Medium"
    ]
   },
   {
@@ -582,9 +582,166 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "79ae24d2",
+   "metadata": {},
+   "source": [
+    "## Sliding Window"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57fa4f09",
+   "metadata": {},
+   "source": [
+    "### [209. Minimum Size Subarray Sum](https://leetcode.com/problems/minimum-size-subarray-sum/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e9143d2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minSubArrayLen(self, target: int, nums: List[int]) -> int:  # 176 ms, 30 MB\n",
+    "        L = len(nums)\n",
+    "        wStart, wSize, curSum =0, L+1, 0\n",
+    "        for wEnd, val in enumerate(nums):\n",
+    "            curSum += val\n",
+    "            while curSum >= target:\n",
+    "                wSize = min(wSize, wEnd-wStart+1)\n",
+    "                curSum -= nums[wStart]\n",
+    "                wStart += 1\n",
+    "        return wSize if wSize!=L+1 else 0\n",
+    "\n",
+    "assert Solution().minSubArrayLen(7, [2,3,1,2,4,3]) == 2\n",
+    "assert Solution().minSubArrayLen(4, [1,4,4]) == 1\n",
+    "assert Solution().minSubArrayLen(11, [1,1,1,1,1,1,1,1]) == 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c15e51a",
+   "id": "555d63b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8e0a8e0",
+   "metadata": {},
+   "source": [
+    "### [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "45ca64f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lengthOfLongestSubstring(self, s: str) -> int:  # 36 ms, 16.5 MB\n",
+    "        left, maxLength, seen = 0, 0, {}\n",
+    "        for right in range(len(s)):\n",
+    "            if s[right] not in seen or seen[s[right]] < left:\n",
+    "                seen[s[right]] = right\n",
+    "                maxLength = max(maxLength, right - left + 1)\n",
+    "            else:\n",
+    "                left = seen[s[right]] + 1\n",
+    "                seen[s[right]] = right\n",
+    "        return maxLength\n",
+    "    \n",
+    "    def lengthOfLongestSubstring2(self, s: str) -> int:  # 43 ms, 16.4 MB\n",
+    "        wStart, maxWinSize, seen = 0, 0, set()\n",
+    "        for wEnd, val in enumerate(s):\n",
+    "            if val in seen:\n",
+    "                while s[wStart]!=val:\n",
+    "                    seen.discard(s[wStart])\n",
+    "                    wStart += 1\n",
+    "                wStart += 1\n",
+    "            else:\n",
+    "                seen.add(val)\n",
+    "                maxWinSize = max(maxWinSize, wEnd-wStart+1)\n",
+    "        return maxWinSize\n",
+    "\n",
+    "assert Solution().lengthOfLongestSubstring(\"abcabcbb\") == 3\n",
+    "assert Solution().lengthOfLongestSubstring(\"bbbbb\") == 1\n",
+    "assert Solution().lengthOfLongestSubstring(\"pwwkew\") == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53c14c39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f12bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61847252",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab609207",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d8abbf7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09754e95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19566afa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd22b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2611458",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -623,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "db047d61",
    "metadata": {},
    "outputs": [],
@@ -680,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "9c8dbeb1",
    "metadata": {},
    "outputs": [],
@@ -742,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "5d8ed712",
    "metadata": {},
    "outputs": [],
@@ -800,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "09f21645",
    "metadata": {},
    "outputs": [],
@@ -831,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3c89489c",
    "metadata": {},
    "outputs": [],
@@ -876,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "d3c872ab",
    "metadata": {},
    "outputs": [],
@@ -912,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "0a0d04ec",
    "metadata": {},
    "outputs": [],
@@ -962,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "f5bc6f2c",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "a55226d7",
    "metadata": {},
    "outputs": [],
@@ -1053,12 +1210,12 @@
    "id": "b2828b5f",
    "metadata": {},
    "source": [
-    "### [228. Summary Ranges](https://leetcode.com/problems/summary-ranges/description/) - Easy"
+    "### [228. Summary Ranges](https://leetcode.com/problems/summary-ranges/) - Easy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "f670cc09",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "2bc59558",
    "metadata": {},
    "outputs": [],
@@ -1218,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "cde46eb2",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "98a9121c",
    "metadata": {},
    "outputs": [],
@@ -1330,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "698365d8",
    "metadata": {},
    "outputs": [],
@@ -1388,12 +1545,12 @@
    "id": "fcfce100",
    "metadata": {},
    "source": [
-    "### [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/description/) - Easy"
+    "### [141. Linked List Cycle](https://leetcode.com/problems/linked-list-cycle/) - Easy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "b4421765",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "e313a3b7",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "449ad681",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "baf463b2",
    "metadata": {},
    "outputs": [],
@@ -1602,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "ba04a638",
    "metadata": {},
    "outputs": [],
@@ -1647,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "57354c83",
    "metadata": {},
    "outputs": [],
@@ -1694,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "36d22579",
    "metadata": {},
    "outputs": [],
@@ -1758,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "d58fa169",
    "metadata": {},
    "outputs": [],
@@ -1795,12 +1952,12 @@
    "id": "66175a6f",
    "metadata": {},
    "source": [
-    "### [66. Plus One](https://leetcode.com/problems/plus-one/description/) - Easy"
+    "### [66. Plus One](https://leetcode.com/problems/plus-one/) - Easy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "2df3b67c",
    "metadata": {},
    "outputs": [],
@@ -1837,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "a43d64a7",
    "metadata": {},
    "outputs": [],
@@ -1874,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "2c0d1aea",
    "metadata": {},
    "outputs": [],
@@ -1917,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "83a5babb",
    "metadata": {},
    "outputs": [],
@@ -1983,8 +2140,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d29c909c",
+   "metadata": {},
+   "source": [
+    "### [70. Climbing Stairs]() - Easy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "b4a8df45",
    "metadata": {},
    "outputs": [],
@@ -2008,25 +2173,203 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "679b469a",
+   "cell_type": "markdown",
+   "id": "5dcdf853",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### [198. House Robber](https://leetcode.com/problems/house-robber/) - Medium"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ae6ecb4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "0e120413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rob(self, nums: List[int]) -> int:  # 34 ms, 16.4 MB\n",
+    "        L = len(nums)\n",
+    "        if L < 3:\n",
+    "            return max(nums)\n",
+    "        dp = [None]*L\n",
+    "        dp[0] = nums[0]\n",
+    "        dp[1] = max(nums[0], nums[1])\n",
+    "        for i in range(2, L):\n",
+    "            dp[i] = max(nums[i]+dp[i-2], dp[i-1])\n",
+    "        return dp[i]\n",
+    "\n",
+    "assert Solution().rob([1,2,3,1]) == 4\n",
+    "assert Solution().rob([2,7,9,3,1]) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53c4ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd07b70f",
+   "metadata": {},
+   "source": [
+    "### [139. Word Break](https://leetcode.com/problems/word-break/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7815c241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:  # 28 ms, 16.6 MB\n",
+    "        L = len(s)\n",
+    "        dp = [True] + [False]*L\n",
+    "        wordDict = set(wordDict)\n",
+    "        maxLen = max(map(len, wordDict))\n",
+    "        for end in range(1, L+1):\n",
+    "            for start in range(end-1, max(end-maxLen-1, -1), -1): # for performance\n",
+    "                if dp[start] and s[start:end] in wordDict :\n",
+    "                    dp[end] = True\n",
+    "                    break\n",
+    "        return dp[-1]\n",
+    "\n",
+    "assert Solution().wordBreak(\"leetcode\", [\"leet\",\"code\"]) == True\n",
+    "assert Solution().wordBreak(\"applepenapple\", [\"apple\",\"pen\"]) == True\n",
+    "assert Solution().wordBreak(\"catsandog\", [\"cats\",\"dog\",\"sand\",\"and\",\"cat\"]) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbc273fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e38ed98c",
+   "metadata": {},
+   "source": [
+    "### [322. Coin Change](https://leetcode.com/problems/coin-change/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "70d55195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    # Bottom Up DP(Tabulation)\n",
+    "    def coinChange(self, coins: List[int], amount: int) -> int:  # 716 ms, 16.7 MB\n",
+    "        max_value = amount + 1\n",
+    "        dp = [0] + [max_value]*amount\n",
+    "        coins.sort()\n",
+    "        for i in range(1, amount + 1):\n",
+    "            for coin in coins:\n",
+    "                if i < coin: break\n",
+    "                dp[i] = min(dp[i], dp[i-coin] + 1)\n",
+    "        return dp[amount] if dp[amount] != max_value else -1\n",
+    "    \n",
+    "    # Top Down DP(Memoization)\n",
+    "    def coinChange2(self, coins: List[int], amount: int) -> int:  # 876 ms, 31.6 MB\n",
+    "        dp = [0]*(amount+1)\n",
+    "        def solve(val):\n",
+    "            if not val: return 0\n",
+    "            if val < 0: return float('inf')\n",
+    "            if not dp[val]:\n",
+    "                dp[val] = min(1 + solve(val-c) for c in coins)\n",
+    "            return dp[val]\n",
+    "        ans = solve(amount)\n",
+    "        return -1 if ans==float('inf') else ans\n",
+    "\n",
+    "assert Solution().coinChange([1,2,5], 11) == 3\n",
+    "assert Solution().coinChange([2], 3) == -1\n",
+    "assert Solution().coinChange([1], 0) == 0\n",
+    "assert Solution().coinChange([474,83,404,3], 264) == 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bee4504",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b1aa67",
+   "metadata": {},
+   "source": [
+    "### [300. Longest Increasing Subsequence](https://leetcode.com/problems/longest-increasing-subsequence/) - Medium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b0017548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    # O(n log(n)) time complexity\n",
+    "    def lengthOfLIS(self, nums: list[int]) -> int:  # 51 ms, 16.9 MB\n",
+    "        slots = [nums.pop(0)]\n",
+    "        for n in nums:\n",
+    "            if n > slots[-1]: slots.append(n)\n",
+    "            else:\n",
+    "                slots[bisect.bisect_left(slots, n)] = n\n",
+    "        return len(slots)\n",
+    "    \n",
+    "    # O(n**2) time complexity\n",
+    "    def lengthOfLIS2(self, nums: List[int]) -> int:  # 884 ms, 16.8 MB\n",
+    "        L = len(nums)\n",
+    "        dp = [1]*L\n",
+    "        ans = 1\n",
+    "        for i in range(1, L):\n",
+    "            maxB = 0\n",
+    "            for j in range(i):\n",
+    "                if nums[j] < nums[i] and maxB < dp[j]:\n",
+    "                    maxB = dp[j] \n",
+    "            if maxB:\n",
+    "                dp[i] = maxB+1\n",
+    "                if dp[i]>ans: ans = dp[i]\n",
+    "        return ans\n",
+    "\n",
+    "assert Solution().lengthOfLIS([10,9,2,5,3,7,101,18, 0]) == 4\n",
+    "assert Solution().lengthOfLIS([0,1,0,3,2,3]) == 4\n",
+    "assert Solution().lengthOfLIS([7,7,7,7,7,7,7]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e00e54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a480bdc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c6238fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2035,6 +2378,86 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "110aee01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abc6b460",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d51475cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0de954f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5193f21f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1e9aec8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86282118",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7debef66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee7b5cc3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b629880d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b0b987",
    "metadata": {},
    "outputs": [],
    "source": []
